# dora-campus-guard

./: .gitignore  README.md  docker-compose.yml  init-elasticsearch.sh  系统架构.graffle
abnormal-detection/: Makefile  black_word.txt  detect.py  pyproject.toml  rpc_server.py  white_word.txt
back-end/: build.gradle  settings.gradle
back-end/src/main/resources/: application.properties  application.yml
dora-spider/: .gitignore  main.py  pyproject.toml  requirements.txt  scrapy.cfg
dora-spider/doraSpider/: items.py  middlewares.py  models.py  pipelines.py  settings.py
dora-spider/doraSpider/configs/: spider_config.py
dora-spider/doraSpider/rabbitmq/consumers/: sentiment_consumer.py
dora-spider/doraSpider/scripts/: buid_db.py  build_db.sql  sync_mysql_to_es.py
dora-spider/doraSpider/spiders/: post_spider.py  sufe_post_spider.py
dora-spider/doraSpider/types/: format.py
dora-spider/doraSpider/utils/: cipher.py  spider_loader.py  time_util.py
front-end/: eslint.config.ts  index.html  package-lock.json  package.json
front-end/src/: App.vue
front-end/src/assets/: main.css
front-end/src/components/: AppHeader.vue
front-end/src/router/: index.ts
front-end/src/types/: sentiment.d.ts
front-end/src/util/: axios.ts  sentimentUtil.ts
front-end/src/views/: AISearchView.vue  HomeView.vue  SentimentView.vue  WarningView.vue
keyword-analysis/: main.py  pyproject.toml  word_freq_result.json
sentimate-analysis/: Makefile  app.py  model_train.py  pyproject.toml  requirements.txt  rpc_server.py  sentiment.py
(+45 files in other folders)
